# asm17-teamprint

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_eng.md  compose.env  docker-compose.yml  package.json  persona-mirror-python.code-workspace
.github/workflows/: build-images.yml
apps/ai-worker/: .env.example  project.json  pyproject.toml
apps/ai-worker/worker/: graph.py  main.py
apps/backend/: .env.example  db.py  main.py  project.json  pyproject.toml  schemas.py  security.py
apps/backend/app/: main.py
apps/backend/app/common/: db.py  security.py  seed.py
apps/backend/app/features/auth/: models.py  schemas.py  service.py
apps/backend/app/features/capture/: models.py  router.py  schemas.py  service.py
apps/backend/app/features/dashboard/: schemas.py  service.py
apps/backend/app/features/persona/: models.py  router.py  schemas.py  service.py
apps/backend/app/features/teamfit/: __init__.py  models.py  router.py  schemas.py  seed.py  service.py
apps/backend/docs/api/: testing.md
apps/backend/tests/: conftest.py  test_admin.py  test_auth.py  test_capture.py  test_persona.py  test_teamfit.py
apps/frontend/: components.json  index.html  package.json  project.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
apps/frontend/src/lib/: contact.ts  i18n.ts
docs/changelog/: 2026-03-09.md  2026-03-10.md  2026-03-21.md  2026-03-22.md  2026-03-23.md  2026-03-24.md  2026-03-25.md  2026-03-26.md  2026-03-28.md  README.md  ROADMAP.md
scripts/: setup-dev.mjs  test-backend.mjs  wait-for-port.mjs
(+47 files in other folders)
