[project]
name = "persona-mirror-backend"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "anthropic>=0.86.0",
  "email-validator>=2.3.0",
  "fastapi>=0.115.0,<1.0.0",
  "openai>=1.70.0,<2.0.0",
  "pgvector>=0.4.1,<1.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "pwdlib[argon2]>=0.2.1,<1.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "resend>=2.26.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
